# sticker-search-api

./: .env.example  Makefile  README.md  pyproject.toml
app/: main.py
app/api/: router.py
app/api/routes/: search.py  stickers.py
app/core/: config.py
app/db/: __init__.py  pool.py
app/schemas/: search.py  stickers.py  tags.py
app/scripts/: classify_nsfw.py  index_stickers.py  tag_stickers.py
app/services/: embeddings.py  hybrid_search.py  indexing.py  llm_tags.py  nsfw.py  query_glossary.py  rerank.py  stickers.py  tags.py  vector_store.py
tests/: conftest.py  test_health.py  test_llm_retry.py  test_llm_tags.py  test_nsfw_filter.py  test_rerank.py  test_search.py  test_stickers.py  test_tags.py
